src/pages/Search/Search.module.scss
$mobile-breakpoint: 480px;

:export {
  mobileBreakpoint: $mobile-breakpoint;
}

.wrapper {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  // header, footer widths, TODO: use variables
  min-height: calc(100vh - 120px - 60px - 60px);

  padding: 0 10px;

  @media (width <= $mobile-breakpoint) {
    // for graph out screen position
    overflow-x: hidden;
    // padding: 0 50px;

    .actionBarBtn {
      min-width: 107px;
    }
  }

  --graph-size: 33vw;
}

.starsWrapper {
  z-index: -1;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.header {
  gap: 40px;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;

  @media (width <= $mobile-breakpoint) {
    display: grid;
    gap: 15px;
    grid-template-columns: repeat(2, 1fr);

    > :nth-child(2) {
      order: 1;
      grid-column: span 2;
    }
  }
}

.infoText {
  font-weight: 400;
  font-size: clamp(20px, 3vw, 36px);
  text-shadow: 0px 0px 15px var(--blue-light);

  * {
    font-weight: inherit;
  }
}

.info {
  margin-top: 40px;
  display: flex;
  justify-content: center;
  position: relative;

  &::before {
    content: '';
    position: absolute;

    margin-top: auto;
    height: 50%;
    z-index: -1;
    filter: blur(20px);

    background: linear-gradient(
      90deg,
      rgba(0, 0, 0, 0) 3.92%,
      rgba(31, 203, 255, 0.2) 40.95%,
      rgba(31, 203, 255, 0.2) 68.97%,
      rgba(0, 0, 0, 0) 100%
    );

    @keyframes slide {
      from {
        left: 0;
        right: 0;
      }

      to {
        left: 150px;
        right: 150px;
      }
    }

    animation: slide 6s infinite alternate;
  }

  display: grid;
  grid-template-columns: 1fr auto 1fr;
  align-items: center;
  gap: 0 3vw;

  position: relative;

  .title {
    text-align: right;

    .keyword {
      color: var(--blue-light);
    }

    .lastTextBlock {
      width: 100%;
      display: inline-block;
    }

    @media ($mobile-breakpoint <= width <= 680px) {
      .keyword {
        display: inline-block;
        // to wrap to new line
        width: 50%;
      }

      .lastTextBlock {
        display: inline;
      }
    }
  }

  .graphWrapper {
    position: relative;

    width: var(--graph-size);
    height: var(--graph-size);
    background-color: black;

    overflow: hidden;
    box-shadow: 0px 0px 5px 1px rgba(31, 203, 255, 0.3),
      0px 0px 42px 0px rgba(31, 203, 255, 0.42);

    &,
    &::after {
      border-radius: 50%;
    }

    &::after {
      content: '';
      position: absolute;
      pointer-events: none;
      left: 0;
      right: 0;
      top: 0;
      bottom: 0;
      box-shadow: inset 0 0 50px 20px black;
    }
  }

  @media (width <= $mobile-breakpoint) {
    display: unset;

    .title {
      &,
      > * {
        font-size: 26px !important;
      }

      .lastTextBlock {
        width: 100%;
        display: inline-block;
      }

      min-width: unset;
    }

    .graphWrapper {
      position: absolute;

      left: calc(-50px + 100vw - (330px * 0.44));
      top: 60px;
    }
  }
}

.advantages {
  display: grid;
  margin: -40px auto 0;
  gap: 0px 5vw;

  grid-template-columns: repeat(3, minmax(0, 33%));
  grid-template-rows: repeat(2, 1fr);
  text-align: center;
  justify-items: center;

  li {
    width: 188px;
    min-height: 70px;

    animation: appear 3s;

    @keyframes appear {
      from {
        opacity: 0;
      }

      to {
        opacity: 1;
      }
    }
  }

  li:nth-child(1) {
    grid-column: 1 / 2;
    grid-row: 1;
  }

  li:nth-child(2) {
    margin-top: -30px;
    grid-column: 2 /3;
    grid-row: 2;
  }

  li:nth-child(3) {
    grid-column: 3 / 4;
    grid-row: 1;
  }

  @media (width <= $mobile-breakpoint) {
    margin: 20px 0 0 !important;

    display: flex;
    flex-direction: column;
    gap: 20px 0;

    li:nth-child(2) {
      margin-top: unset;
    }
  }
}

.header {
  margin: 10px auto;
  width: 420px;

  @media (width <= $mobile-breakpoint) {
    width: unset;

    > div {
      width: 100vw;
    }
  }
}

.footer {
  display: flex;
  gap: 0 clamp(10px, 2.6vw, 40px);
  justify-content: center;
}

.info2 {
  text-align: center;
  margin-top: -5%;

  * {
    font-weight: 400;
    margin: 0;
  }

  > :last-child {
    margin-top: 70px;
  }

  strong {
    color: #74ff00;
  }

  $animation-duration: 2s;

  h2 {
    font-size: clamp(26px, 3.3vw, 50px);
    color: rgba(255, 255, 255, 0.78);
    animation: anim $animation-duration 0.3s forwards;
    opacity: 0;
  }

  h3 {
    font-size: clamp(40px, 4.7vw, 72px);
    animation: anim $animation-duration;
  }

  h4 {
    margin-top: 17px;
    font-size: clamp(20px, 2.1vw, 32px);
    color: rgba(255, 255, 255, 0.5);
    animation: anim $animation-duration 0.6s forwards;
    opacity: 0;
  }

  i {
    text-decoration: line-through;
  }
}

@keyframes anim {
  0% {
    transform: scale(5);
    opacity: 0;
  }

  20% {
    transform: scale(1.1);
    opacity: 1;
  }

  100% {
    transform: scale(1);
    opacity: 1;
  }

  // 100% {
  //   transform: scale(0);
  // }
}

